--- a/spec/spec/spec.v1.yaml
+++ b/spec/spec/spec.v1.yaml
@@ -1851,7 +1851,7 @@ components:
         parameters:
           type: array
           items:
-            $ref: '#/components/schemas/Parameter'
+            $ref: '#/components/schemas/TestCaseParameter'
           description: Content of the prompt in this test case
         updatedAt:
           type: string
@@ -1875,10 +1875,10 @@ components:
         parameters:
           type: array
           items:
-            $ref: '#/components/schemas/Parameter'
+            $ref: '#/components/schemas/TestCaseParameter'
           description: Content of the prompt in this test case
 
-    Parameter:
+    TestCaseParameter:
       type: object
       properties:
         key:
