--- a/spec/spec/spec.v1.yaml
+++ b/spec/spec/spec.v1.yaml
@@ -1279,17 +1279,7 @@ paths:
     get:
       summary: List all test cases for a prompt
       description: |
-        Retrieves a list of all test cases associated with a prompt. This endpoint is crucial for understanding the evolution and lifecycle of branch content, allowing users to access and review all historical and current iterations of a branch.
-
-        **Features**:
-        - **Commit Tracking**: Provides detailed information about each commit, including commit messages, authors, and timestamps, which helps in tracking the changes made over time.
-        - **Historical Analysis**: Facilitates the analysis of how a branch has evolved, enabling users to see the progression of content and identify key milestones.
-        - **Auditing and Compliance**: Maintains a clear record of all changes made to a branch, supporting auditing and compliance requirements.
-
-        **Use Cases**:
-        - Developers reviewing commit histories to understand the development process of a branch.
-        - Content managers analyzing changes for quality control and consistency.
-        - Compliance officers auditing changes for regulatory adherence.
+        Retrieves a list of all test cases associated with a prompt.
 
       operationId: listTestCases
       tags:
@@ -1306,7 +1296,7 @@ paths:
           required: true
           schema:
             type: string
-          description: The unique identifier of the prompt whose branch commits are being listed.
+          description: The unique identifier of the prompt whose test cases are being listed.
       responses:
         '200':
           description: Successfully retrieved a list of all test cases associated with the prompt.
@@ -1317,13 +1307,13 @@ paths:
                 items:
                   $ref: '#/components/schemas/TestCase'
         '404':
-          description: No branch found matching the specified identifiers.
+          description: No test case found matching the specified identifiers.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
         '500':
-          description: A server error occurred, preventing the retrieval of commit information.
+          description: A server error occurred, preventing the retrieval of test cases.
           content:
             application/json:
               schema:
@@ -1349,7 +1339,7 @@ paths:
           required: true
           schema:
             type: string
-          description: The unique identifier of the prompt whose branch is being committed to.
+          description: The unique identifier of the prompt whose test case is being created.
       requestBody:
         required: true
         description: Contains the necessary information for creating a new test case, such as name and list of test parameters.
@@ -1371,7 +1361,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
         '404':
-          description: The specified branch was not found, and thus the test case could not be created.
+          description: The specified prompt was not found, and thus the test case could not be created.
           content:
             application/json:
               schema:
@@ -1404,7 +1394,7 @@ paths:
           required: true
           schema:
             type: string
-          description: The unique identifier of the prompt whose branch commits are being listed.
+          description: The unique identifier of the prompt whose test case is being retrieved.
         - name: testId
           in: path
           required: true
@@ -1413,7 +1403,7 @@ paths:
           description: The unique identifier of the test case.
       responses:
         '200':
-          description: Successfully retrieved the test cases associated with the prompt.
+          description: Successfully retrieved the test case associated with the prompt.
           content:
             application/json:
               schema:
@@ -1421,7 +1411,7 @@ paths:
                 items:
                   $ref: '#/components/schemas/TestCase'
         '404':
-          description: No branch found matching the specified identifiers.
+          description: No test case found matching the specified identifiers.
           content:
             application/json:
               schema:
@@ -1453,7 +1443,7 @@ paths:
           required: true
           schema:
             type: string
-          description: The unique identifier of the prompt whose branch is being committed to.
+          description: The unique identifier of the prompt whose test case is being updated.
         - name: testId
           in: path
           required: true
@@ -1513,7 +1503,7 @@ paths:
           required: true
           schema:
             type: string
-          description: The unique identifier of the prompt whose branch commits are being listed.
+          description: The unique identifier of the prompt whose test case are being deleted.
         - name: testId
           in: path
           required: true
