spec, service, and dal changes

--- a/spec/spec/spec.v1.yaml
+++ b/spec/spec/spec.v1.yaml
@@ -1833,7 +1833,7 @@ components:
         id:
           allOf:
             - $ref: '#/components/schemas/KSUID'
-          description: Unique identifier for the test case of the branch
+          description: Unique identifier for the test case of the prompt
         name:
           type: string
           minLength: 1
@@ -1876,11 +1876,11 @@ components:
           type: string
           minLength: 1
           maxLength: 30
-          description: Timestamp when this test case was updated
+          description: Test case parameter key.
         value:
           type: string
           minLength: 1
-          description: Timestamp when this test case was updated
+          description: Test case parameter value.
 
     Error:
       type: object
